--- a/css.css
+++ b/css.css
@@ -2,6 +2,5 @@
     font-family: monospace;
     margin-top: 10px;
     text-align: center;
-    color: aliceblue;
-    background-color: black;
+    color: black;
 }
